compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__pipe.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 183
expression: "\npub fn go(x, f) {\n  case x |> f {\n    0 -> 1\n    _ -> 2\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x, f) {
  case x |> f {
    0 -> 1
    _ -> 2
  }
}


----- COMPILED JAVASCRIPT
export function go(x, f) {
  let $ = (() => {
    let _pipe = x;
    return f(_pipe);
  })();
  if ($ === 0) {
    return 1;
  } else {
    return 2;
  }
}
