compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__pointless.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 67
expression: "\npub fn go(x) {\n  case x {\n    _ -> x\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    _ -> x
  }
}


----- COMPILED JAVASCRIPT
export function go(x) {
  return x;
}
