compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__result.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 197
expression: "\npub fn go(x) {\n  case x {\n    Ok(_) -> 1\n    Error(_) -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    Ok(_) -> 1
    Error(_) -> 0
  }
}


----- COMPILED JAVASCRIPT
import { Ok } from "../gleam.mjs";

export function go(x) {
  if (x instanceof Ok) {
    return 1;
  } else {
    return 0;
  }
}
