compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__single_clause_variables.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 303
expression: "\npub fn main() {\n  let text = \"first defined\"\n  case \"defined again\" {\n    text -> Nil\n  }\n  let text = \"a third time\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let text = "first defined"
  case "defined again" {
    text -> Nil
  }
  let text = "a third time"
}


----- COMPILED JAVASCRIPT
export function main() {
  let text = "first defined";
  let $ = "defined again";
  let text$1 = $;
  undefined
  let text$2 = "a third time";
  return text$2;
}
