compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__single_clause_variables_assigned.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 319
expression: "\npub fn main() {\n  let text = \"first defined\"\n  let other = case \"defined again\" {\n    text -> Nil\n  }\n  let text = \"a third time\"\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let text = "first defined"
  let other = case "defined again" {
    text -> Nil
  }
  let text = "a third time"
}


----- COMPILED JAVASCRIPT
export function main() {
  let text = "first defined";
  let _block;
  let $ = "defined again";
  let text$1 = $;
  _block = undefined;
  let other = _block;
  let text$2 = "a third time";
  return text$2;
}
