compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__case__slicing_is_handled_properly_with_multiple_branches.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/case.rs
assertion_line: 287
expression: "\npub fn main() {\n  case \"12345\" {\n    \"0\" <> rest -> rest\n    \"123\" <> rest -> rest\n    _ -> \"\"\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  case "12345" {
    "0" <> rest -> rest
    "123" <> rest -> rest
    _ -> ""
  }
}


----- COMPILED JAVASCRIPT
export function main() {
  let $ = "12345";
  if ($.startsWith("0")) {
    let rest = $.slice(1);
    return rest;
  } else if ($.startsWith("123")) {
    let rest = $.slice(3);
    return rest;
  } else {
    return "";
  }
}
